@@ -1,3 +1,7 @@
+Mon Mar 8 7:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkcolour3d.c: Remove gtk warning message
+
 Thu Mar 4 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* widget3d.c: Remove 3d accelerated test on non-windows platforms
